--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   # ローカル:リモート
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./src:/var/src/html
+      - ./src:/var/www/html
   # phpのコンテナをもとに立てている
     depends_on:
       - php
@@ -22,7 +22,7 @@ services:
   php:
     build: ./php
     volumes:
-      - ./src:/var/src/html
+      - ./src:/var/www/html
       - ./php/php.ini:/usr/local/etc/php/conf.d/php.ini
     depends_on:
       - db
